<resources>
    <string name="app_name">Application</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_event_place">Enter Event Place</string>
    <string name="enter_event_date">Enter Event Date</string>
    <string name="enter_event_time">Enter Event Time</string>
    <string name="enter_event_desc">Enter Event Description</string>
    <string name="addEvent">ADD EVENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_events">There Are No Events</string>
    <string name="details">Details</string>
    <string name="agenda">Agenda</string>
    <string name="people">people</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
